畑の更新メソッドも追加
